# RTSP_RECORDER

./: CMakeLists.txt  LisCam.kdev4  ip.txt  main.cpp
.kdev4/: LisCam.kdev4
src/: CameraRecorder.cpp  CameraRecorder.h  RTSPRecorderApp.cpp  RTSPRecorderApp.h  main.cpp  utils.cpp  utils.h
